[gd_scene load_steps=13 format=4 uid="uid://ccg6cjn1ptrcg"]

[ext_resource type="Texture2D" uid="uid://bdpjq1kw46etx" path="res://Assets/Actor/Characters/EggBoy/SeparateAnim/levelthreeBG.png" id="1_6d1hy"]
[ext_resource type="TileSet" uid="uid://dryeg0hq3owkm" path="res://tilesets/tileset.tres" id="1_o83te"]
[ext_resource type="PackedScene" uid="uid://r5vda3y831wt" path="res://Scenes/player.tscn" id="2_xvy6h"]
[ext_resource type="PackedScene" uid="uid://bo270atiomwvt" path="res://Scenes/pickup_item.tscn" id="3_0x76e"]
[ext_resource type="Resource" uid="uid://o70sb5f80yad" path="res://Resources/gold_coin.tres" id="4_8l88t"]
[ext_resource type="Script" path="res://Scriptes/iglooDetection.gd" id="5_wbtht"]
[ext_resource type="PackedScene" uid="uid://6uuvl27khdb8" path="res://pick_up_key.tscn" id="6_wpnij"]
[ext_resource type="AudioStream" uid="uid://d0v4i4tyq5irw" path="res://Assets/Sounds/ExternalSounds/acheivment.mp3" id="7_ddik4"]
[ext_resource type="AudioStream" uid="uid://beau72jsqrdc5" path="res://Assets/Sounds/ExternalSounds/game-bonus-144751.mp3" id="8_t8e3n"]
[ext_resource type="AudioStream" uid="uid://cvfqink4qpo7y" path="res://Assets/Sounds/ExternalSounds/game-music-loop-6-144641.mp3" id="9_m0875"]
[ext_resource type="AudioStream" uid="uid://cgoog8g02osdv" path="res://Assets/Sounds/ExternalSounds/game-character-140506.mp3" id="10_831fc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t5uhh"]
radius = 35.171

[node name="main" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -13.0
offset_top = -210.0
offset_right = 1140.0
offset_bottom = 444.0
texture = ExtResource("1_6d1hy")

[node name="tileLayters" type="Node" parent="."]

[node name="GroundTileLayer" type="TileMapLayer" parent="tileLayters"]
position = Vector2(102, 3)
tile_map_data = PackedByteArray("AAAWAA4AAAACAAkAAAAWAA0AAAACAAgAAAAWAAwAAAACAAgAAAAWAAsAAAACAAgAAAAWAAoAAAACAAgAAAAWAAkAAAACAAgAAAAWAAgAAAAFAAgAAAAWAAcAAAABAAgAAAAWAAYAAAAGAAkAAAAWAAUAAAAAAAgAAAAWAAQAAAAAAAgAAAAWAAMAAAAAAAgAAAAWAAIAAAAGAAgAAAAWAAEAAAAFAAkAAAAWAP7/AAACAAgAAAAWAP3/AAACAAgAAAAWAPz/AAACAAgAAAAWAPv/AAACAAcAAAAVAA4AAAABAAkAAAAVAA0AAAABAAsAAAAVAAwAAAABAAgAAAAVAAsAAAABAAgAAAAVAAoAAAABAAgAAAAVAAkAAAABAAgAAAAVAAgAAAABAAgAAAAVAAcAAAABAAgAAAAVAAYAAAABAAcAAAAVAAUAAQACAAgAAAAVAAQAAQACAAcAAAAVAAMAAQACAAYAAAAVAAIAAAABAAkAAAAVAAEAAAABAAgAAAAVAAAAAAABAAgAAAAVAPz/AAABAAgAAAAVAPv/AAABAAcAAAAUAA4AAAABAAkAAAAUAA0AAAABAAgAAAAUAAwAAAABAAgAAAAUAAsAAAABAAgAAAAUAAoAAAABAAgAAAAUAAkAAAABAAgAAAAUAAgAAAABAAgAAAAUAAcAAAABAAgAAAAUAAYAAAABAAcAAAAUAAUAAQABAAgAAAAUAAQAAQABAAcAAAAUAAMAAQABAAYAAAAUAAIAAAABAAkAAAAUAAEAAAABAAgAAAAUAAAAAAABAAgAAAAUAP//AAABAAgAAAAUAP7/AAABAAgAAAAUAP3/AAABAAgAAAAUAPz/AAABAAgAAAAUAPv/AAABAAcAAAATAA4AAAABAAkAAAATAA0AAAABAAgAAAATAAwAAAABAAgAAAATAAsAAAABAAgAAAATAAoAAAAAAAsAAAATAAkAAAABAAgAAAATAAgAAAABAAgAAAATAAcAAAABAAgAAAATAAYAAAABAAcAAAATAAUAAQABAAgAAAATAAQAAQABAAcAAAATAAMAAQABAAYAAAATAAIAAAABAAkAAAATAAEAAAABAAgAAAATAAAAAAABAAgAAAATAP//AAABAAgAAAATAP7/AAABAAgAAAATAP3/AAABAAgAAAATAPz/AAABAAsAAAATAPv/AAABAAcAAAASAA4AAAABAAkAAAASAA0AAAABAAgAAAASAAwAAAABAAgAAAASAAsAAAABAAgAAAASAAoAAAABAAgAAAASAAkAAAABAAgAAAASAAgAAAAGAAkAAAASAAcAAAAAAAgAAAASAAYAAAAAAAcAAAASAAUAAQABAAgAAAASAAQAAQABAAcAAAASAAMAAQABAAYAAAASAAIAAAAAAAkAAAASAAEAAAAAAAgAAAASAAAAAAAGAAgAAAASAP//AAABAAgAAAASAP7/AAABAAgAAAASAP3/AAABAAgAAAASAPz/AAABAAgAAAASAPv/AAABAAcAAAARAA4AAAABAAkAAAARAA0AAAABAAgAAAARAAwAAAABAAgAAAARAAsAAAABAAgAAAARAAoAAAABAAgAAAARAAkAAAABAAgAAAARAAgAAAABAAcAAAARAAcAAQACAAgAAAARAAYAAQACAAcAAAARAAUAAQAFAAcAAAARAAQAAQABAAcAAAARAAMAAQAFAAgAAAARAAIAAQACAAcAAAARAAEAAQACAAYAAAARAAAAAAABAAkAAAARAP//AAABAAgAAAARAP7/AAABAAgAAAARAP3/AAABAAgAAAARAPz/AAABAAgAAAARAPv/AAABAAcAAAAQAA4AAAABAAkAAAAQAA0AAAABAAgAAAAQAAwAAAABAAgAAAAQAAsAAAABAAgAAAAQAAoAAAABAAgAAAAQAAkAAAABAAgAAAAQAAgAAAABAAcAAAAQAAcAAQABAAgAAAAQAAYAAQABAAcAAAAQAAUAAQABAAcAAAAQAAQAAQABAAcAAAAQAAMAAQALAAMAAAAQAAIAAQABAAcAAAAQAAEAAQABAAYAAAAQAAAAAAABAAkAAAAQAP//AAABAAgAAAAQAP7/AAABAAgAAAAQAP3/AAABAAgAAAAQAPz/AAABAAgAAAAQAPv/AAABAAcAAAAPAA4AAAABAAkAAAAPAA0AAAABAAgAAAAPAAwAAAAAAAsAAAAPAAsAAAABAAgAAAAPAAoAAAABAAgAAAAPAAkAAAABAAgAAAAPAAgAAAABAAcAAgAPAAcAAQABAAgAAQAPAAYAAQABAAcAAAAPAAUAAQALAAMAAAAPAAQAAQALAAQAAAAPAAMAAQALAAIAAAAPAAIAAQABAAcAAAAPAAEAAQABAAYAAQAPAAAAAAABAAkAAQAPAP//AAABAAsAAAAPAP7/AAAAAAsAAAAPAP3/AAABAAgAAAAPAPz/AAABAAgAAAAPAPv/AAABAAcAAAAOAA4AAAABAAkAAAAOAA0AAAABAAgAAAAOAAwAAAABAAgAAAAOAAsAAAABAAgAAAAOAAoAAAABAAgAAAAOAAkAAAABAAgAAAAOAAgAAAABAAcAAgAOAAcAAQABAAgAAQAOAAYAAQALAAIAAAAOAAUAAQABAAcAAAAOAAQAAQALAAIAAAAOAAMAAQALAAEAAAAOAAIAAQABAAcAAAAOAAEAAQABAAYAAQAOAAAAAAABAAkAAQAOAP//AAABAAgAAAAOAP7/AAABAAgAAAAOAP3/AAAAAAsAAAAOAPz/AAABAAgAAAAOAPv/AAABAAcAAAANAA4AAAABAAkAAAANAA0AAAABAAgAAAANAAwAAAABAAgAAAANAAsAAAABAAgAAAANAAoAAAABAAgAAAANAAkAAAABAAgAAAANAAgAAAABAAcAAgANAAcAAQABAAgAAQANAAYAAQABAAcAAAANAAUAAQABAAcAAAANAAQAAQABAAcAAAANAAMAAQABAAcAAAANAAIAAQALAAQAAAANAAEAAQABAAYAAQANAAAAAAABAAkAAQANAP//AAABAAgAAAANAP7/AAABAAgAAAANAP3/AAABAAgAAAANAPz/AAABAAgAAAANAPv/AAABAAcAAAAMAA4AAAABAAkAAAAMAA0AAAABAAgAAAAMAAwAAAABAAsAAAAMAAsAAAABAAgAAAAMAAoAAAABAAgAAAAMAAkAAAABAAgAAAAMAAgAAAABAAcAAgAMAAcAAQABAAgAAAAMAAYAAQALAAAAAAAMAAUAAQALAAQAAAAMAAQAAQALAAMAAAAMAAMAAQALAAIAAAAMAAIAAQALAAMAAAAMAAEAAQABAAYAAAAMAAAAAAABAAkAAAAMAP//AAABAAgAAAAMAP7/AAABAAgAAAAMAP3/AAABAAgAAAAMAPz/AAABAAgAAAAMAPv/AAABAAcAAAALAA4AAAABAAkAAAALAA0AAAABAAgAAAALAAwAAAABAAgAAAALAAsAAAABAAsAAAALAAoAAAABAAgAAAALAAkAAAABAAgAAAALAAgAAAABAAcAAAALAAcAAQABAAgAAAALAAYAAQABAAcAAAALAAUAAQABAAcAAAALAAQAAQALAAAAAAALAAMAAQABAAcAAAALAAIAAQABAAcAAAALAAEAAQABAAYAAAALAAAAAAABAAkAAAALAP//AAABAAgAAAALAP7/AAABAAgAAAALAP3/AAABAAgAAAALAPz/AAABAAgAAAALAPv/AAABAAcAAAAKAA4AAAABAAkAAAAKAA0AAAABAAgAAAAKAAwAAAABAAgAAAAKAAsAAAABAAgAAAAKAAoAAAABAAgAAAAKAAkAAAABAAgAAAAKAAgAAAABAAcAAAAKAAcAAQABAAgAAAAKAAYAAQABAAcAAAAKAAUAAQALAAEAAAAKAAQAAQALAAQAAAAKAAMAAQALAAQAAAAKAAIAAQALAAQAAAAKAAEAAQABAAYAAAAKAAAAAAABAAkAAAAKAP//AAABAAgAAAAKAP7/AAABAAgAAAAKAP3/AAABAAgAAAAKAPz/AAABAAsAAAAKAPv/AAABAAcAAAAJAA4AAAABAAkAAAAJAA0AAAABAAgAAAAJAAwAAAABAAgAAAAJAAsAAAABAAgAAAAJAAoAAAABAAgAAAAJAAkAAAABAAsAAAAJAAgAAAABAAcAAAAJAAcAAQAAAAgAAAAJAAYAAQAAAAcAAAAJAAUAAQAAAAcAAAAJAAQAAQAAAAcAAAAJAAMAAQAAAAcAAAAJAAIAAQAAAAcAAAAJAAEAAQAAAAYAAAAJAAAAAAABAAkAAAAJAP//AAABAAgAAAAJAP7/AAABAAgAAAAJAP3/AAABAAgAAAAJAPz/AAABAAgAAAAJAPv/AAABAAcAAAAIAA4AAAABAAkAAAAIAA0AAAABAAgAAAAIAAwAAAABAAgAAAAIAAsAAAABAAsAAAAIAAoAAAAAAAsAAAAIAAkAAAABAAgAAAAIAAgAAAAFAAkAAAAIAAcAAAACAAgAAAAIAAYAAAACAAgAAAAIAAUAAAACAAgAAAAIAAQAAAACAAgAAAAIAAMAAAACAAgAAAAIAAIAAAACAAgAAAAIAAEAAAACAAgAAAAIAAAAAAAFAAgAAAAIAP//AAABAAgAAAAIAP7/AAABAAgAAAAIAP3/AAABAAgAAAAIAPz/AAABAAgAAAAIAPv/AAABAAcAAAAHAA4AAAABAAkAAAAHAA0AAAABAAgAAAAHAAwAAAABAAgAAAAHAAsAAAABAAgAAAAHAAoAAAABAAgAAAAHAAkAAAABAAgAAAAHAAgAAAABAAgAAAAHAAcAAAABAAgAAAAHAAYAAAABAAgAAAAHAAUAAAABAAgAAAAHAAQAAAABAAgAAAAHAAMAAAABAAgAAAAHAAIAAAABAAgAAAAHAAEAAAABAAgAAAAHAAAAAAAAAAsAAAAHAP//AAABAAgAAAAHAP7/AAAAAAsAAAAHAP3/AAABAAgAAAAHAPz/AAABAAgAAAAHAPv/AAABAAcAAAAGAA4AAAABAAkAAAAGAA0AAAABAAgAAAAGAAwAAAAAAAsAAAAGAAsAAAABAAgAAAAGAAoAAAABAAsAAAAGAAkAAAABAAgAAAAGAAgAAAABAAgAAAAGAAcAAAAAAAsAAAAGAAYAAAABAAgAAAAGAAUAAAABAAgAAAAGAAQAAAABAAgAAAAGAAMAAAABAAgAAAAGAAIAAAABAAgAAAAGAAEAAAABAAgAAAAGAAAAAAABAAgAAAAGAP//AAABAAgAAAAGAP7/AAABAAgAAAAGAP3/AAABAAgAAAAGAPz/AAABAAgAAAAGAPv/AAABAAcAAAAFAA4AAAABAAkAAAAFAA0AAAABAAgAAAAFAAwAAAABAAgAAAAFAAsAAAABAAgAAAAFAAoAAAABAAgAAAAFAAkAAAABAAgAAAAFAAgAAAABAAgAAAAFAAcAAAABAAgAAAAFAAYAAAABAAgAAAAFAAUAAAAAAAsAAAAFAAQAAAABAAgAAAAFAAMAAAAAAAsAAAAFAAIAAAABAAgAAAAFAAEAAAABAAgAAAAFAAAAAAABAAgAAAAFAP//AAABAAsAAAAFAP7/AAABAAgAAAAFAP3/AAABAAgAAAAFAPz/AAABAAgAAAAFAPv/AAABAAcAAAAEAA4AAAAAAAkAAAAEAA0AAAAAAAgAAAAEAAwAAAAAAAgAAAAEAAsAAAAAAAgAAAAEAAoAAAAAAAgAAAAEAAkAAAAAAAgAAAAEAAgAAAAAAAgAAAAEAAcAAAAAAAgAAAAEAAYAAAAAAAgAAAAEAAUAAAAAAAgAAAAEAAQAAAAAAAgAAAAEAAMAAAAAAAgAAAAEAAIAAAAAAAgAAAAEAAEAAAAAAAgAAAAEAAAAAAAAAAgAAAAEAP//AAAAAAgAAAAEAP7/AAAAAAgAAAAEAP3/AAAAAAgAAAAEAPz/AAAAAAgAAAAEAPv/AAAAAAcAAAArAAgAAAACAAkAAAArAAcAAAACAAgAAAArAAYAAAACAAgAAAArAAUAAAACAAgAAAArAAQAAAAFAAgAAAArAAMAAAABAAgAAAArAAIAAAABAAgAAAArAAEAAAABAAcAAAAqAAgAAAABAAkAAAAqAAcAAAABAAgAAAAqAAYAAAABAAgAAAAqAAUAAAABAAgAAAAqAAQAAAABAAgAAAAqAAMAAAABAAgAAAAqAAIAAAABAAgAAAAqAAEAAAABAAcAAAApAAgAAAABAAkAAAApAAcAAAABAAgAAAApAAYAAAABAAgAAAApAAUAAAABAAgAAAApAAQAAAABAAgAAAApAAMAAAABAAgAAAApAAIAAAABAAgAAAApAAEAAAABAAcAAAAoAAgAAAABAAkAAAAoAAcAAAABAAgAAAAoAAYAAAABAAgAAAAoAAUAAAABAAgAAAAoAAQAAAABAAgAAAAoAAMAAAABAAgAAAAoAAIAAAABAAgAAAAoAAEAAAABAAcAAAAnAAgAAAABAAkAAAAnAAcAAAABAAgAAAAnAAYAAAABAAgAAAAnAAUAAAABAAgAAAAnAAQAAAABAAgAAAAnAAMAAAABAAgAAAAnAAIAAAABAAgAAAAnAAEAAAABAAcAAAAmAAgAAAABAAkAAAAmAAcAAAABAAgAAAAmAAYAAAABAAgAAAAmAAUAAAABAAgAAAAmAAQAAAABAAgAAAAmAAMAAAABAAsAAAAmAAIAAAABAAgAAAAmAAEAAAABAAcAAAAlAAgAAAABAAkAAAAlAAcAAAABAAgAAAAlAAYAAAABAAgAAAAlAAUAAAABAAgAAAAlAAQAAAABAAgAAAAlAAMAAAABAAgAAAAlAAIAAAABAAgAAAAlAAEAAAABAAcAAAAkAAgAAAABAAkAAAAkAAcAAAABAAgAAAAkAAYAAAABAAgAAAAkAAUAAAABAAgAAAAkAAQAAAABAAgAAAAkAAMAAAABAAgAAAAkAAIAAAABAAgAAAAkAAEAAAABAAcAAAAjAAgAAAABAAkAAAAjAAcAAAABAAgAAAAjAAYAAAABAAgAAAAjAAUAAAABAAgAAAAjAAQAAAABAAgAAAAjAAMAAAABAAgAAAAjAAIAAAABAAgAAAAjAAEAAAABAAcAAAAiAAgAAAABAAkAAAAiAAcAAAABAAgAAAAiAAYAAAABAAgAAAAiAAUAAAABAAgAAAAiAAQAAAABAAgAAAAiAAMAAAABAAgAAAAiAAIAAAABAAgAAAAiAAEAAAABAAcAAAAhAAgAAAABAAkAAAAhAAcAAAABAAgAAAAhAAYAAAABAAgAAAAhAAUAAAABAAgAAAAhAAQAAAABAAgAAAAhAAMAAAABAAgAAAAhAAIAAAABAAgAAAAhAAEAAAABAAcAAAAgAAgAAAABAAkAAAAgAAcAAAABAAgAAAAgAAYAAAABAAgAAAAgAAUAAAABAAgAAAAgAAQAAAABAAgAAAAgAAMAAAABAAgAAAAgAAIAAAABAAgAAAAgAAEAAAABAAcAAgAfAAgAAAABAAkAAAAfAAcAAAABAAgAAAAfAAYAAAAAAAsAAAAfAAUAAAABAAgAAAAfAAQAAAABAAgAAAAfAAMAAAABAAgAAAAfAAIAAAABAAgAAAAeAAgAAAABAAkAAAAeAAcAAAABAAgAAAAeAAYAAAABAAgAAAAeAAUAAAABAAgAAAAeAAQAAAABAAgAAAAeAAMAAAABAAgAAAAeAAIAAAABAAgAAAAdAAgAAAABAAkAAAAdAAcAAAABAAgAAAAdAAYAAAABAAgAAAAdAAUAAAABAAgAAAAdAAQAAAABAAgAAAAdAAMAAAABAAgAAAAdAAIAAAABAAgAAAAcAAgAAAABAAkAAAAcAAcAAAABAAgAAAAcAAYAAAABAAgAAAAcAAUAAAABAAgAAAAcAAQAAAABAAgAAAAcAAMAAAABAAgAAAAcAAIAAAABAAgAAAAcAAEAAAABAAcAAAAbAAgAAAABAAkAAAAbAAcAAAABAAgAAAAbAAYAAAABAAgAAAAbAAUAAAABAAgAAAAbAAQAAAABAAgAAAAbAAMAAAABAAgAAAAbAAIAAAABAAgAAAAbAAEAAAABAAcAAAAaAAgAAAABAAkAAAAaAAcAAAABAAsAAAAaAAYAAAABAAgAAAAaAAUAAAABAAgAAAAaAAQAAAABAAgAAAAaAAMAAAABAAgAAAAaAAIAAAABAAgAAAAaAAEAAAABAAcAAAAZAAgAAAABAAkAAAAZAAcAAAABAAgAAAAZAAYAAAABAAgAAAAZAAUAAAABAAgAAAAZAAQAAAABAAgAAAAZAAMAAAABAAgAAAAZAAIAAAABAAsAAAAZAAEAAAABAAcAAAAYAAgAAAABAAkAAAAYAAcAAAABAAsAAAAYAAYAAAABAAgAAAAYAAUAAAABAAgAAAAYAAQAAAABAAgAAAAYAAMAAAABAAgAAAAYAAIAAAABAAgAAAAXAAgAAAABAAkAAAAXAAcAAAABAAgAAAAXAAYAAAABAAgAAAAXAAUAAAABAAgAAAAXAAQAAAABAAgAAAAXAAMAAAAAAAsAAAAXAAIAAAABAAgAAAAiAAAAAgAGAAIAAAAiAP//AgAGAAEAAAAiAP7/AgAGAAEAAAAiAP3/AgAGAAEAAAAiAPz/AgAGAAAAAAAhAAAAAgAFAAIAAAAhAP//AgAFAAEAAAAhAP7/AgAFAAEAAAAhAP3/AgAFAAEAAAAhAPz/AgAFAAAAAAAgAAAAAgAFAAIAAAAgAP//AgAFAAEAAAAgAP7/AgAFAAEAAAAgAP3/AgAFAAEAAAAgAPz/AgAFAAAAAAAfAAAAAgAFAAIAAAAfAP//AgAFAAEAAgAfAP7/AgAFAAEAAgAfAP3/AgAFAAEAAgAfAPz/AgAFAAAAAAAeAAAAAgAFAAIAAQAeAP//AgAFAAEAAAAeAP7/AgAFAAEAAAAeAP3/AgAFAAEAAAAeAPz/AgAFAAAAAQAdAP//AgAFAAEAAQAdAP7/AgAFAAEAAQAdAP3/AgAFAAEAAQAcAP//AgAFAAEAAAAcAP7/AgAFAAEAAAAcAP3/AgAFAAEAAAAbAP//AgAFAAEAAAAbAP7/AgAFAAEAAAAbAP3/AgAFAAEAAAAaAAAAAgAFAAIAAAAaAP//AgAFAAEAAAAaAP7/AgAFAAEAAAAaAP3/AgAFAAEAAAAaAPz/AgAFAAAAAAAZAP3/AgAFAAEAAAAZAPz/AgAFAAAAAAAYAAAAAgAFAAIAAAAYAP3/AgAFAAEAAAAYAPz/AgAFAAAAAAAXAP3/AgAEAAEAAAAXAPz/AgAEAAAAAAAiAPv/AgADAAEAAAAiAPr/AgADAAEAAAAhAPv/AgACAAEAAAAhAPr/AgACAAEAAAAgAPv/AgACAAEAAAAgAPr/AgACAAEAAAAfAPv/AgACAAEAAAAfAPr/AgACAAEAAAAeAPv/AgACAAEAAAAeAPr/AgACAAEAAAAdAPv/AgACAAEAAAAdAPr/AgACAAEAAAAcAPv/AgACAAEAAAAcAPr/AgACAAEAAAAbAPv/AgACAAEAAAAbAPr/AgACAAEAAAAaAPv/AgACAAEAAAAaAPr/AgACAAEAAAAZAPv/AgACAAEAAAAZAPr/AgACAAEAAAAYAPv/AgACAAEAAAAYAPr/AgACAAEAAAAXAPv/AgABAAEAAAAXAPr/AgABAAEAAAAiAPn/AgADAAEAAAAiAPj/AgADAAAAAAAhAPn/AgACAAEAAAAhAPj/AgACAAAAAAAgAPn/AgACAAEAAAAgAPj/AgACAAAAAAAfAPn/AgACAAEAAAAfAPj/AgACAAAAAAAeAPn/AgACAAEAAAAeAPj/AgACAAAAAAAdAPn/AgACAAEAAAAdAPj/AgACAAAAAAAcAPn/AgACAAEAAAAcAPj/AgACAAAAAAAbAPn/AgACAAEAAAAbAPj/AgACAAAAAAAaAPn/AgACAAEAAAAaAPj/AgACAAAAAAAZAPn/AgACAAEAAAAZAPj/AgACAAAAAAAYAPn/AgACAAEAAAAYAPj/AgACAAAAAAAXAPn/AgABAAEAAAAXAPj/AgABAAAAAAAdAPf/AAACAAkAAAAdAPb/AAACAAgAAAAdAPX/AAACAAgAAAAdAPT/AAACAAgAAAAdAPP/AAACAAgAAAAdAPL/AAACAAcAAAAcAPf/AAABAAkAAAAcAPb/AAABAAgAAAAcAPX/AAABAAgAAAAcAPT/AAABAAgAAAAcAPP/AAABAAgAAAAcAPL/AAABAAcAAAAbAPf/AAABAAkAAAAbAPb/AAAAAAwAAAAbAPX/AAAAAAwAAAAbAPT/AAAAAAwAAAAbAPP/AAAAAAwAAAAbAPL/AAABAAcAAAAaAPf/AAABAAkAAAAaAPb/AAAAAAwAAAAaAPX/AAAAAAwAAAAaAPT/AAAAAAwAAAAaAPP/AAAAAAwAAAAaAPL/AAABAAcAAAAZAPf/AAABAAkAAAAZAPb/AAAAAAwAAAAZAPX/AAAAAAwAAAAZAPT/AAAAAAwAAAAZAPP/AAAAAAwAAAAZAPL/AAABAAcAAAAYAPf/AAABAAkAAAAYAPb/AAAAAAwAAAAYAPX/AAAAAAwAAAAYAPT/AAAAAAwAAAAYAPP/AAAAAAwAAAAYAPL/AAABAAcAAAAXAPf/AAABAAkAAAAXAPb/AAAAAAwAAAAXAPX/AAAAAAwAAAAXAPT/AAAAAAwAAAAXAPP/AAAAAAwAAAAXAPL/AAABAAcAAAAWAPf/AAABAAkAAAAWAPb/AAAAAAwAAAAWAPX/AAAAAAwAAAAWAPT/AAAAAAwAAAAWAPP/AAAAAAwAAAAWAPL/AAABAAcAAAAVAPf/AAABAAkAAAAVAPb/AAAAAAwAAAAVAPX/AAAAAAwAAAAVAPT/AAAAAAwAAAAVAPP/AAAAAAwAAAAVAPL/AAABAAcAAAAUAPf/AAABAAkAAAAUAPb/AAAAAAwAAAAUAPX/AAAAAAwAAAAUAPT/AAAAAAwAAAAUAPP/AAAAAAwAAAAUAPL/AAABAAcAAAATAPf/AAABAAkAAAATAPb/AAAAAAwAAAATAPX/AAAAAAwAAAATAPT/AAAAAAwAAAATAPP/AAAAAAwAAAATAPL/AAABAAcAAAASAPf/AAABAAkAAAASAPb/AAABAAgAAAASAPX/AAABAAgAAAASAPT/AAABAAgAAAASAPP/AAABAAgAAAASAPL/AAABAAcAAAARAPf/AAAAAAkAAAARAPb/AAAAAAgAAAARAPX/AAAAAAgAAAARAPT/AAAAAAgAAAARAPP/AAAAAAgAAAARAPL/AAAAAAcAAAAxAAUAAAACAAkAAAAxAAQAAAACAAgAAAAxAAMAAAACAAgAAAAxAAIAAAACAAgAAAAxAAEAAAACAAcAAAAwAAUAAAABAAkAAAAwAAQAAAABAAgAAAAwAAMAAAABAAgAAAAwAAIAAAABAAgAAAAwAAEAAAAFAAkAAAAvAAUAAAABAAkAAAAvAAQAAAABAAgAAAAvAAMAAAABAAgAAAAvAAIAAAABAAgAAAAvAAEAAAABAAgAAAAuAAUAAAABAAkAAAAuAAQAAAABAAgAAAAuAAMAAAABAAgAAAAuAAIAAAABAAgAAAAuAAEAAAAGAAkAAAAtAAUAAAAAAAkAAAAtAAQAAAAGAAgAAAAtAAMAAAABAAgAAAAtAAIAAAABAAgAAAAtAAEAAAABAAcAAAAwAAAAAAACAAgAAAAwAP//AAACAAcAAAAvAAAAAAABAAgAAAAvAP//AAABAAcAAAAuAAAAAAAAAAgAAAAuAP//AAAAAAcAAAAsAAEAAAABAAcAAAAsAAQAAAABAAkAAAAsAAIAAAABAAgAAAAsAAMAAAABAAgAAAAbAPz/AgAFAAAAAAAcAPz/AgAFAAAAAAAdAPz/AgAFAAAAAAAdAAAAAgAFAAIAAAAcAAAAAgAFAAIAAAAbAAAAAgAFAAIAAAAVAP3/AAABAAgAAAAVAP7/AAABAAgAAAAVAP//AAABAAgAAAAYAP7/AgAFAAEAAAAXAP7/AgAEAAEAAAAXAP//AgAEAAEAAAAWAP//AAACAAgAAAAWAAAAAAACAAgAAAAZAP//AgAFAAEAAAAYAP//AgAFAAEAAAAXAAAAAgAEAAIAAAAXAAEAAAABAAcAAAAYAAEAAAABAAcAAAAZAAAAAgAFAAIAAAAZAP7/AgAFAAEAAAAdAAEAAAABAAcAAgAeAAEAAAABAAcAAgAfAAEAAAABAAcAAgA=")
tile_set = ExtResource("1_o83te")

[node name="DecorTileLayet" type="TileMapLayer" parent="tileLayters"]
tile_map_data = PackedByteArray("AAALAP3/BAAGAAgAAAALAP7/BAAGAAkAAAAMAP3/BAAHAAgAAAAMAP7/BAAHAAkAAAAZAAEABAAGAAgAAAAZAAIABAAGAAkAAAAaAAEABAAHAAgAAAAaAAIABAAHAAkAAAAZAP3/BAAGAAgAAAAZAP7/BAAGAAkAAAAaAP3/BAAHAAgAAAAaAP7/BAAHAAkAAAAVAAgAAQACAA4AAQAVAAcAAQACAA0AAAAVAAAAAQACAAwAAQAUAAgAAQAAAA4AAQAUAAcAAQAAAA0AAAAUAAAAAQAAAAwAAQAVAAYAAQACAA0AAAAVAAUAAQACAA0AAAAVAAQAAQACAA0AAAAVAAMAAQACAA0AAAAVAAIAAQACAA0AAAAVAAEAAQACAA0AAAAUAAYAAQAAAA0AAAAUAAUAAQAAAA0AAAAUAAQAAQAAAA0AAAAUAAMAAQAAAA0AAAAUAAIAAQAAAA0AAAAUAAEAAQAAAA0AAAAlAAEAAwAMABUAAAAlAAAAAwAMABQAAAAlAP//AwAMABQAAAAlAP7/AwAMABQAAAAlAP3/AwAMABQAAAAlAPz/AwAMABMAAAAkAAEAAwAKABUAAAAkAAAAAwAKABQAAAAkAP//AwAKABQAAAAkAP7/AwAKABQAAAAkAP3/AwAKABQAAAAkAPz/AwAKABMAAAAOAPz/AwAAAAsAAAAOAP3/AwAAAAwAAAAOAP7/AwAAAA0AAAAPAPz/AwABAAsAAAAPAP3/AwABAAwAAAAPAP7/AwABAA0AAAAQAPz/AwACAAsAAAAQAP3/AwACAAwAAAAQAP7/AwACAA0AAAA=")
tile_set = ExtResource("1_o83te")

[node name="Player" parent="." instance=ExtResource("2_xvy6h")]
position = Vector2(559, 115)

[node name="Camera2D2" type="Camera2D" parent="Player"]

[node name="PickUpItem" parent="." instance=ExtResource("3_0x76e")]
position = Vector2(501, 105)
inventory_item = ExtResource("4_8l88t")

[node name="PickUpItem2" parent="." instance=ExtResource("3_0x76e")]
position = Vector2(336, -29)
inventory_item = ExtResource("4_8l88t")

[node name="PickUpItem3" parent="." instance=ExtResource("3_0x76e")]
position = Vector2(335, 77)
inventory_item = ExtResource("4_8l88t")

[node name="PickUpItem4" parent="." instance=ExtResource("3_0x76e")]
position = Vector2(337, 118)
inventory_item = ExtResource("4_8l88t")

[node name="PickUpItem5" parent="." instance=ExtResource("3_0x76e")]
position = Vector2(208, 120)
inventory_item = ExtResource("4_8l88t")

[node name="inglooBody" type="Area2D" parent="."]
position = Vector2(243, -36)
script = ExtResource("5_wbtht")

[node name="igooCollsion" type="CollisionShape2D" parent="inglooBody"]
position = Vector2(4, 5)
shape = SubResource("CircleShape2D_t5uhh")

[node name="inglooEnterLabel" type="Label" parent="inglooBody"]
visible = false
z_index = 1
offset_left = 37.0
offset_top = -32.0
offset_right = 200.0
offset_bottom = 17.0
scale = Vector2(0.609378, 1.38149)
text = "Press Enter to enter my Igloo!"

[node name="PickUpItem6" parent="." instance=ExtResource("6_wpnij")]
visible = false
position = Vector2(571, -99)

[node name="sfx" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="coinGrab" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("7_ddik4")

[node name="enter" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("8_t8e3n")

[node name="bgm" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("9_m0875")
autoplay = true

[node name="characterNoise" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("10_831fc")

[connection signal="body_entered" from="inglooBody" to="inglooBody" method="_on_body_entered"]
[connection signal="body_exited" from="inglooBody" to="inglooBody" method="_on_body_exited"]
